Create Listing Logics

--- a/listings/templates/listing_details.html
+++ b/listings/templates/listing_details.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-6 mb-4">
             {% if listing.logo %}
-            <img src="{{ listing.logo.url }}" class="img-fluid" style="width: 400px; height: 250px;" alt="Logo">
+            <img src="{{ listing.logo.url }}" class="img-fluid" style="width: 400px; height: 250px;" alt="{{ listing.name }}">
             {% endif %}
         </div>
 
