--- a/listings/templates/home.html
+++ b/listings/templates/home.html
@@ -18,10 +18,11 @@
                     <h5 class="card-title">{{ listing.name }}</h5>
                     <p class="card-text">{{ listing.author.first_name }} {{ listing.author.last_name }}</p>
                     <p class="card-text">{{ listing.description }}</p>
+
                     {% if listing.web_url %}
-                    <a href="{{ listing.web_url }}" target="_blank">Website</a>
+                    <a href="{{ listing.web_url }}" target="_blank" class="btn btn-primary">Website</a>
                     {% endif %}
-                    <br><br>
+
                     <a href="{% url 'listings' listing.pk %}" class="btn btn-primary">View Details</a>
                 </div>
             </div>
