--- a/listings/templates/base.html
+++ b/listings/templates/base.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #272727;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #272727;">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}" style="color: #ff652f;">MumiakGuides</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
