--- a/listings/templates/home.html
+++ b/listings/templates/home.html
@@ -19,11 +19,19 @@
                     <p class="card-text">{{ listing.author.first_name }} {{ listing.author.last_name }}</p>
                     <p class="card-text">{{ listing.description }}</p>
 
-                    {% if listing.web_url %}
-                    <a href="{{ listing.web_url }}" target="_blank" class="btn btn-primary">Website</a>
-                    {% endif %}
+                    <div class="row">
+                        {% if listing.web_url %}
+                        <div class="col-md-6">
+                            <a href="{{ listing.web_url }}" target="_blank" class="btn btn-primary btn-block mt-3">Visit
+                                Website</a>
+                        </div>
+                        {% endif %}
 
-                    <a href="{% url 'listings' listing.pk %}" class="btn btn-primary">View Details</a>
+                        <div class="{% if listing.web_url %}col-md-6{% else %}col-md-12{% endif %}">
+                            <a href="{% url 'listings' listing.pk %}" class="btn btn-primary btn-block mt-3">View
+                                Details</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
