Ordering the listings according to day created

--- a/listings/templates/home.html
+++ b/listings/templates/home.html
@@ -17,6 +17,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ listing.name }}</h5>
                     <p class="card-text">{{ listing.author.first_name }} {{ listing.author.last_name }}</p>
+                    <p class="card-text">{{ listing.creation_date }}</p>
                     <p class="card-text">{{ listing.description }}</p>
 
                     <div class="row">
