--- a/listings/templates/listing_details.html
+++ b/listings/templates/listing_details.html
@@ -22,6 +22,7 @@
             <a href="{{ listing.web_url }}" target="_blank" class="btn btn-primary">Website</a>
             {% endif %}
 
+            {% if user.is_authenticated %}
             <div class="row mt-4">
                 <div class="col-md-4">
                     <a href="{% url 'listings_update' listing.pk %}" class="btn btn-primary btn-block">Update
@@ -31,6 +32,8 @@
                     <a href="{% url 'listing_delete' listing.pk %}" class="btn btn-danger btn-block">Delete Listing</a>
                 </div>
             </div>
+            {% endif %}
+            
         </div>
     </div>
 
