--- a/listings/templates/update_listing.html
+++ b/listings/templates/update_listing.html
@@ -2,6 +2,7 @@
 {% block title %} | Update Listing {% endblock %}
 
 {% block content %}
+{% if user.is_authenticated %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-8">
@@ -35,4 +36,9 @@
         </div>
     </div>
 </div>
+{% else %}
+<div class="alert alert-danger" role="alert">
+    <strong>User authentication required</strong>
+</div>
+{% endif %}
 {% endblock %}
