--- a/listings/templates/index.html
+++ b/listings/templates/index.html
@@ -1,24 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
+  <h1 class="text-center">MumiakGuides</h1>
 
-<h1 class="text-center">Listings</h1>
-
-<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
     {% for listing in object_list %}
-    <div class="col">
+      <div class="col">
         <div class="card">
-            <div class="card-body">
-                <h5 class="card-title"><a href="{% url 'listing' listing.pk %}">{{ listing.name }}</a></h5>
-                <p class="card-text">
-                    Owner: {{ listing.owner.first_name }} {{ listing.owner.last_name }}<br>
-                    Description: {{ listing.description }}
-                </p>
-                <a href="{% url 'listing' listing.pk %}" class="btn btn-primary">View</a>
-            </div>
+          <div class="card-body">
+            <h5 class="card-title"><a href="{% url 'listing' listing.pk %}">{{ listing.name }}</a></h5>
+            <p class="card-text">
+              Owner: {{ listing.owner.first_name }} {{ listing.owner.last_name }}<br>
+              Description: {{ listing.description }}
+            </p>
+            <a href="{% url 'listing' listing.pk %}" class="btn btn-primary">View</a>
+          </div>
         </div>
-    </div>
+      </div>
     {% endfor %}
-</div>
+  </div>
 
 {% endblock %}
