--- a/listings/templates/listing_detail.html
+++ b/listings/templates/listing_detail.html
@@ -8,6 +8,7 @@
     <p>Owner: {{ listing.owner.first_name }} {{ listing.owner.last_name }}</p>
 
     <a href="{% url 'update_listing' listing.pk %}" class="btn btn-secondary">Edit</a>
+    <a href="{% url 'delete_listing' listing.pk %}" class="btn btn-danger">Delete</a>
 
     <p>Description: {{ listing.description }}</p>
     <a href="{% url 'home' %}" class="btn btn-primary">Home</a>
