--- a/listings/templates/index.html
+++ b/listings/templates/index.html
@@ -12,7 +12,7 @@
             <p class="card-text">
               Owner: {{ listing.owner.first_name }} {{ listing.owner.last_name }}<br>
               Created on: {{ listing.date }} <br>
-              Description: {{ listing.description }}
+              Description: {{ listing.description|slice:":30" }}
             </p>
             <a href="{% url 'listing' listing.pk %}" class="btn btn-primary">View</a>
           </div>
