--- a/listings/templates/listing_detail.html
+++ b/listings/templates/listing_detail.html
@@ -8,8 +8,10 @@
     <p>Owner: {{ listing.owner.first_name }} {{ listing.owner.last_name }}</p>
     <p>Created on: {{ listing.date }}</p>
 
+    {% if user.is_authenticated %}
     <a href="{% url 'update_listing' listing.pk %}" class="btn btn-secondary">Edit</a>
     <a href="{% url 'delete_listing' listing.pk %}" class="btn btn-danger">Delete</a>
+    {% endif %}
 
     <p>Description: {{ listing.description }}</p>
     <a href="{% url 'home' %}" class="btn btn-primary">Home</a>
