--- a/listings/templates/update_listing.html
+++ b/listings/templates/update_listing.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% if user.is_authenticated %}
 
 {% block title %} Update Listing {% endblock %}
 
@@ -21,4 +22,5 @@
 
 </div>
 
+{% endif %}
 {% endblock %}
