--- a/listings/templates/add_town.html
+++ b/listings/templates/add_town.html
@@ -1,19 +1,20 @@
 {% extends 'base.html' %}
-{% block title %} Update Listing {% endblock %}
+{% block title %} Add another Town {% endblock %}
 
 {% block content %}
 
 <div class="container mt-4">
-    <h1 class="text-center">Update Listing</h1>
+    <h1>Add Town</h1>
+    <br><br>
 
-    <div class="row justify-content-center">
+    <div class="row">
         <div class="col-md-6">
             <form action="" method="post">
                 {% csrf_token %}
 
                 {{ form.as_p }}
 
-                <button type="submit" class="btn btn-primary">Update</button>
+                <button type="submit" class="btn btn-primary">Create</button>
             </form>
         </div>
     </div>
