--- a/listings/templates/base.html
+++ b/listings/templates/base.html
@@ -24,7 +24,10 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'add_listing' %}">Create</a>
+                        <a class="nav-link" href="{% url 'add_listing' %}">Create Listing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'add_town' %}">Add Town</a>
                     </li>
                     {% endif %}
                 </ul>
