--- a/listings/templates/listing_detail.html
+++ b/listings/templates/listing_detail.html
@@ -6,12 +6,14 @@
 <div class="container mt-4">
     <h2>{{ listing.name }}</h2>
     <p>Owner: {{ listing.owner.first_name }} {{ listing.owner.last_name }}</p>
+    <p>Town: {{ listing.town }}</p>
     <p>Created on: {{ listing.date }}</p>
 
     {% if user.is_authenticated %}
     <a href="{% url 'update_listing' listing.pk %}" class="btn btn-secondary">Edit</a>
     <a href="{% url 'delete_listing' listing.pk %}" class="btn btn-danger">Delete</a>
     {% endif %}
+    <br><br>
 
     <p>Description: {{ listing.description }}</p>
     <a href="{% url 'home' %}" class="btn btn-primary">Home</a>
