--- a/listings/templates/delete_listing.html
+++ b/listings/templates/delete_listing.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
-{% if user.is_authenticated %}
-
 {% block title %} Delete Listing {% endblock %}
 
 {% block content %}
 
+{% if user.is_authenticated %}
 <div class="container mt-4">
     <h1 class="text-center">Delete {{ listing.name }}</h1>
 
@@ -19,8 +18,9 @@
             </form>
         </div>
     </div>
-
 </div>
-
+{% else %}
+<h5 class="text-center">Please login to access this page</h5>
 {% endif %}
+
 {% endblock %}
