--- a/listings/templates/add_town.html
+++ b/listings/templates/add_town.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 
+{% if user.is_authenticated %}
 <div class="container mt-4">
     <h1>Add Town</h1>
     <br><br>
@@ -18,7 +19,9 @@
             </form>
         </div>
     </div>
-
 </div>
+{% else %}
+<h5 class="text-center">Please login to access this page</h5>
+{% endif %}
 
 {% endblock %}
