Determining the owner of a listing

--- a/listings/templates/delete_listing.html
+++ b/listings/templates/delete_listing.html
@@ -4,21 +4,23 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-<div class="container mt-4">
-    <h1 class="text-center">Delete {{ listing.name }}</h1>
+    {% if user.id == listing.owner.id %}
+        <div class="container mt-4">
+            <h1 class="text-center">Delete {{ listing.name }}</h1>
 
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <form action="" method="post">
-                {% csrf_token %}
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <form action="" method="post">
+                        {% csrf_token %}
 
-                <strong>Are you sure?</strong><br>
+                        <strong>Are you sure?</strong><br>
 
-                <button type="submit" class="btn btn-danger">Remove</button>
-            </form>
+                        <button type="submit" class="btn btn-danger">Remove</button>
+                    </form>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+    {% endif %}
 {% else %}
 <h5 class="text-center">Please login to access this page</h5>
 {% endif %}
