--- a/listings/templates/listing_detail.html
+++ b/listings/templates/listing_detail.html
@@ -10,8 +10,10 @@
     <p>Created on: {{ listing.date }}</p>
 
     {% if user.is_authenticated %}
-    <a href="{% url 'update_listing' listing.pk %}" class="btn btn-secondary">Edit</a>
-    <a href="{% url 'delete_listing' listing.pk %}" class="btn btn-danger">Delete</a>
+        {% if user.id == listing.owner.id %}
+            <a href="{% url 'update_listing' listing.pk %}" class="btn btn-secondary">Edit</a>
+            <a href="{% url 'delete_listing' listing.pk %}" class="btn btn-danger">Delete</a>
+        {% endif %}
     {% endif %}
     <br><br>
 
