How to restrict who can make listings

--- a/listings/templates/add_listing.html
+++ b/listings/templates/add_listing.html
@@ -19,6 +19,12 @@
         </div>
     </div>
 </div>
+
+<script>
+    var name = "{{ user.id }}";
+    document.getElementById("founder").value = name;
+</script>
+
 {% else %}
 <h5 class="text-center">Please login to access this page</h5>
 {% endif %}
