--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -16,6 +16,8 @@
 
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
+
+            <p class="mt-3">Don't have an account? <a href="{% url 'register' %}">Sign Up</a></p>
         </div>
     </div>
 
