--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -16,6 +16,8 @@
 
                 <button type="submit" class="btn btn-primary">Register</button>
             </form>
+
+            <p class="mt-3">Already have an account? <a href="{% url 'login' %}">Login</a></p>
         </div>
     </div>
 
