--- a/listings/templates/add_listing.html
+++ b/listings/templates/add_listing.html
@@ -12,6 +12,7 @@
             <form action="" method="post">
                 {% csrf_token %}
 
+                {{ form.media }}
                 {{ form.as_p }}
 
                 <button type="submit" class="btn btn-primary">Create</button>
