--- a/listings/templates/listing_detail.html
+++ b/listings/templates/listing_detail.html
@@ -17,7 +17,7 @@
     {% endif %}
     <br><br>
 
-    <p>Description: {{ listing.description|safe }}</p>
+    <p>{{ listing.description|safe }}</p>
     <a href="{% url 'home' %}" class="btn btn-primary">Home</a>
 
     <br><br>
