--- a/listings/templates/index.html
+++ b/listings/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1 class="text-center">MumiakGuides</h1>
+  <!--<h1 class="text-center">MumiakGuides</h1>-->
 
   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
     {% for listing in object_list %}
@@ -13,9 +13,10 @@
               Owner: {{ listing.owner.first_name }} {{ listing.owner.last_name }}<br>
               Town: <a href="{% url 'town' listing.town %}">{{ listing.town }}</a><br>
               Created on: {{ listing.date }} <br>
+              {{ listing.snippet }}
               <!--{{ listing.description|slice:":30"|safe }}-->
             </p>
-            <a href="{% url 'listing' listing.pk %}" class="btn btn-primary">View</a>
+            <!--<a href="{% url 'listing' listing.pk %}" class="btn btn-primary">View</a>-->
           </div>
         </div>
       </div>
