--- a/listings/templates/base.html
+++ b/listings/templates/base.html
@@ -55,6 +55,9 @@
                 <ul class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout_page' %}">Logout</a>
                     </li>
                     {% else %}
