--- a/users/templates/registration/edit_profile.html
+++ b/users/templates/registration/edit_profile.html
@@ -14,6 +14,8 @@
 
                 {{ form.as_p }}
 
+                <p>Change your password using this form: <a href="{% url 'password' %}">Change</a></p>
+
                 <button type="submit" class="btn btn-primary">Save Changes</button>
             </form>
         </div>
