--- a/listings/templates/update_listing.html
+++ b/listings/templates/update_listing.html
@@ -10,7 +10,7 @@
 
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <form action="" method="post">
+            <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
 
                 {{ form.media }}
