--- a/listings/templates/listing_detail.html
+++ b/listings/templates/listing_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %} {{listing.name }} {% endblock %}
 
 {% block content %}
@@ -46,8 +47,13 @@
     <div class="card mb-3 mt-4">
         <div class="row g-0">
             <div class="col-md-2">
-                <img src="{{ listing.owner.userprofile.profile_pic.url }}" class="img-fluid rounded-start"
-                    alt="{{ listing.owner.first_name }}">
+                {% if listing.owner.userprofile.profile_pic and listing.owner.userprofile.profile_pic.url %}
+                    <img src="{{ listing.owner.userprofile.profile_pic.url }}" class="img-fluid rounded-start"
+                        alt="{{ listing.owner.first_name }}">
+                {% else %}
+                    <img src="{% static 'listings/images/unicorn.jpeg' %}" class="img-fluid rounded-start"
+                        alt="{{ listing.owner.first_name }}">
+                {% endif %}
             </div>
             <div class="col-md-10">
                 <div class="card-body">
