--- a/listings/templates/listing_detail.html
+++ b/listings/templates/listing_detail.html
@@ -51,7 +51,7 @@
                     <img src="{{ listing.owner.userprofile.profile_pic.url }}" class="img-fluid rounded-start"
                         alt="{{ listing.owner.first_name }}">
                 {% else %}
-                    <img src="{% static 'listings/images/unicorn.jpeg' %}" class="img-fluid rounded-start"
+                    <img src="{% static 'listings/images/profile.png' %}" class="img-fluid rounded-start"
                         alt="{{ listing.owner.first_name }}">
                 {% endif %}
             </div>
