--- a/listings/templates/base.html
+++ b/listings/templates/base.html
@@ -54,11 +54,15 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout_page' %}">Logout</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="{% url 'home' %}" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Settings
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li> <a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Profile</a> </li>
+                            <li> <a class="dropdown-item" href="{% url 'logout_page' %}">Logout</a> </li>
+                        </ul>
                     </li>
                     {% else %}
                     <li class="nav-item">
