--- a/listings/templates/listing_detail.html
+++ b/listings/templates/listing_detail.html
@@ -48,11 +48,11 @@
         <div class="row g-0">
             <div class="col-md-2">
                 {% if listing.owner.userprofile.profile_pic and listing.owner.userprofile.profile_pic.url %}
-                    <img src="{{ listing.owner.userprofile.profile_pic.url }}" class="img-fluid rounded-start"
-                        alt="{{ listing.owner.first_name }}">
+                <img src="{{ listing.owner.userprofile.profile_pic.url }}" class="img-fluid rounded-start"
+                    alt="{{ listing.owner.first_name }}">
                 {% else %}
-                    <img src="{% static 'listings/images/profile.png' %}" class="img-fluid rounded-start"
-                        alt="{{ listing.owner.first_name }}">
+                <img src="{% static 'listings/images/profile.png' %}" class="img-fluid rounded-start"
+                    alt="{{ listing.owner.first_name }}">
                 {% endif %}
             </div>
             <div class="col-md-10">
@@ -60,8 +60,10 @@
                     <h5 class="card-title">{{ listing.owner.first_name }} {{ listing.owner.last_name }}</h5>
                     <p class="card-text">
                         <small class="text-body-secondary">
+                            <a href="{% url 'user_profile' listing.owner.userprofile.id %}" target="_blank">Profile</a>
+
                             {% if listing.owner.userprofile.website_url %}
-                            <a href="{{ listing.owner.userprofile.website_url }}" target="_blank">Website</a> 
+                            | <a href="{{ listing.owner.userprofile.website_url }}" target="_blank">Website</a>
                             {% endif %}
 
                             {% if listing.owner.userprofile.x_url %}
@@ -69,11 +71,11 @@
                             {% endif %}
 
                             {% if listing.owner.userprofile.instagram_url %}
-                            | <a href="{{ listing.owner.userprofile.instagram_url }}" target="_blank">Instagram</a> 
+                            | <a href="{{ listing.owner.userprofile.instagram_url }}" target="_blank">Instagram</a>
                             {% endif %}
 
                             {% if listing.owner.userprofile.tiktok_url %}
-                            | <a href="{{ listing.owner.userprofile.tiktok_url }}" target="_blank">Tiktok</a> 
+                            | <a href="{{ listing.owner.userprofile.tiktok_url }}" target="_blank">Tiktok</a>
                             {% endif %}
 
                             {% if listing.owner.userprofile.facebook_url %}
